--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.application.name=troca-sevicos
 
-# H2
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2  
+# Dados de conexao com o banco de dados
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=admin
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Datasource
-spring.datasource.url=jdbc:h2:~/test
-spring.datasource.username=teste
-spring.datasource.password=123
-spring.datasource.driver-class-name=org.h2.Driver
-spring.jpa.hibernate.ddl-auto=create-drop
+# Configuracoes do JPA/Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
